syntax = "proto3";

package ypb;
option go_package = "/;ypb";
import "message.proto";


service ChaosMakerService {
  rpc ImportChaosMakerRules(ImportChaosMakerRulesRequest) returns (Empty);
  rpc QueryChaosMakerRule(QueryChaosMakerRuleRequest) returns (QueryChaosMakerRuleResponse);
  rpc DeleteChaosMakerRuleByID(DeleteChaosMakerRuleByIDRequest) returns (Empty);
  rpc ExecuteChaosMakerRule(ExecuteChaosMakerRuleRequest) returns (stream ExecResult);
  rpc IsRemoteAddrAvailable(IsRemoteAddrAvailableRequest) returns (IsRemoteAddrAvailableResponse);

}

message IsRemoteAddrAvailableResponse {
  string Addr = 1;
  bool IsAvailable = 2;
  string Reason = 3;
  string Status = 4;
}


message IsRemoteAddrAvailableRequest {
  string Addr = 1;
  int64 Timeout = 2;
  string Probe = 3;
}

message ChaosMakerRuleGroup {
  string Title = 1;
  string Description = 2;
  string Keywords = 3;
  repeated string Protocols = 4;
  string Solution = 5;
}

message ExecuteChaosMakerRuleRequest {
  repeated ChaosMakerRuleGroup Groups = 1;
  repeated string ExtraOverrideDestinationAddress = 2;

  // 随机延迟
  int64 Concurrent = 3;
  int32 TrafficDelayMinSeconds = 4;
  int32 TrafficDelayMaxSeconds = 5;

  // 额外重复，如果为 -1 认为是永久重复
  int64 ExtraRepeat = 6;

  // 每组流量之间重复的次数
  int64 GroupGapSeconds = 7;
}


message DeleteChaosMakerRuleByIDRequest {
  int64 Id = 1;
}

message ChaosMakerRule {
  int64 Id = 1;
  string RawTrafficBeyondIpPacketBase64 = 2;
  string RawTrafficBeyondLinkLayerBase64 = 3;
  string RawTrafficBeyondHttpBase64 = 4;
  string RuleType = 5;
  string SuricataRaw = 6;
  string Protocol = 7;
  string Action = 8;
  string Name = 9;
  string NameZh = 10;
  string ClassType = 11;
  string ClassTypeZh = 12;
  string Group = 13;
  string Keywords = 15;
  string KeywordsZh = 16;
  string Description = 17;
  string DescriptionZh = 18;
  repeated string CVE = 19;
}


message QueryChaosMakerRuleResponse {
  Paging Pagination = 1;
  int64 Total = 2;
  repeated ChaosMakerRule Data = 3;
}

message QueryChaosMakerRuleRequest {
  Paging Pagination = 1;
  string RuleType = 2;
  repeated string Keywords = 3;
}


message ImportChaosMakerRulesRequest {
  string Content = 1;
  // suricata / http-request / icmp
  string RuleType = 2;
}